2013-04-04  Yann Hodique  <yann.hodique@gmail.com>  (tiny change)

	* emacs-lisp/package.el (package-pinned-packages): New var.
	(package--add-to-archive-contents): Obey it (bug#14118).

2013-04-03  Alan Mackenzie  <acm@muc.de>

	Handle `parse-partial-sexp' landing inside a comment opener
	(Bug#13244). Also adapt to the new values of element 7 of a parse
	state.

	* progmodes/cc-engine.el (c-state-pp-to-literal): New optional
	parameter `not-in-delimiter'.  Handle being inside comment opener.
	(c-invalidate-state-cache-1): Reckon with an extra "invalid"
	character in case we're typing a '*' after a '/'.
	(c-literal-limits): Handle the awkward "not-in-delimiter" cond arm
	instead by passing the parameter to c-state-pp-to-literal.

	* progmodes/cc-fonts.el (c-font-lock-doc-comments): New handling
	for elt. 7 of a parse state.

2013-04-01  Paul Eggert  <eggert@cs.ucla.edu>

	Use UTF-8 for most files with non-ASCII characters (Bug#13936).
	* international/latin1-disp.el, international/mule-util.el:
	* language/cyril-util.el, language/european.el, language/ind-util.el:
	* language/lao-util.el, language/thai.el, language/tibet-util.el:
	* language/tibetan.el, language/viet-util.el:
	Switch from iso-2022-7bit to utf-8 or (if needed) utf-8-emacs.

2013-04-01  Stefan Monnier  <monnier@iro.umontreal.ca>

	* electric.el (electric-pair-inhibit-predicate): New var (bug#14000).
	(electric-pair-post-self-insert-function): Use it.
	(electric-pair-default-inhibit): New function, extracted from
	electric-pair-post-self-insert-function.

2013-03-31  Roland Winkler  <winkler@gnu.org>

	* emacs-lisp/crm.el (completing-read-multiple): Doc fix.

2013-03-31  Stefan Monnier  <monnier@iro.umontreal.ca>

	* hi-lock.el (hi-lock-mode): Cleanup after revert-buffer (bug#13891).

2013-03-30  Fabián Ezequiel Gallina  <fabian@anue.biz>

	Un-indent after "pass" and "return" statements (Bug#13888)
	* progmodes/python.el (python-indent-block-enders): New var.